# samples

./: .gitignore  README.md
AgentController/: AgentController.cpp
AgentController/KinectV2/: Makefile  kinectController.cpp
AgentController/OculusRift/: Makefile  OculusRiftCtrl.cpp
CleanUpHumanInteraction/: Makefile  Table.cpp  TrashBox.cpp  Wagon.cpp  cleanUpRobot.cpp  cleanUpRobot2.cpp  cleanUpUser.cpp  cleanUpUser2.cpp  seWagon_c02.xml
FollowMeWithPSMove/: Camera.cpp  FinishLine.cpp  FollowMeHuman.cpp  FollowMeTestRobot.cpp  ITP1.cpp  ITP2.cpp  Makefile  Moderator.cpp  Operator.cpp  Wall.cpp  score.cpp
JointAttention/: partner.cpp  point_record.cpp  user.cpp  user2.cpp  user3.cpp
KinectV2_Using_Quaternions/: KinectV2_2013.sln
KinectV2_Using_Quaternions/KinectV2/: KinectApp.cpp  linekage.cpp  readme.txt
Kinem_Sig_Ros/src/: Sig_app_kinem.cpp
LeapMotion/: ControllerSample.cpp
MultiUser_Demo/MultiUser/: Camera.cpp  Makefile  MultiUser.xml  MultiUserCtr.cpp  cleanUpUser.cpp  cleanUpUser2.cpp
OculusRiftSensorDK2/ViewerService/: OculusRiftSensorDK2.cpp  OculusRiftSensorDK2.vcxproj
ROS_integration/sig_ros/src/: ros_controller.cpp  sig_controller.cpp
controllers/AgentController/: AgentController2.cpp  Makefile
controllers/AgentController/KinectV2/: README.md
controllers/AgentController/OculusRift/: OculusRiftCtrl.cpp
controllers/AgentControllerByBVHfile/: BVHWorld.xml  Makefile  Man-bvh.xml  bvh_man.x3d  filename.bvh
controllers/AgentControllerByBVHfile/srcs/: BVH.cpp  BVH.h  BVHController.cpp  BVHController.h
controllers/CleanUpHumanInteraction/: CleanUpWorld.xml  Table.cpp  TrashBox.cpp  cleanUpRobot.cpp  cleanUpRobot2.cpp  cleanUpUser.cpp  cleanUpUser2.cpp  seSideTable_c01.xml
controllers/DistanceSensor_tester/: Makefile  distanceSensor.cpp  distanceSensor.xml
controllers/FollowMeWithPSMove/: CheckPoint.cpp  CheckPoint2.cpp  FinishLine.cpp  ITP2.cpp  Wall.cpp
controllers/JointAttention/: Makefile  partner2.cpp
controllers/Kinem_Sig_Ros/src/: Sig_app_kinem.cpp
controllers/LeapMotion/: ControllerSample.cpp  Makefile
controllers/ROS_integration/: .gitignore  RobotInMove.xml
controllers/ROS_integration/sig_ros/: CMakeLists.txt
controllers/Turtlebot_Interaction/sig_turtle_interaction/: CMakeLists.txt  package.xml
controllers/Turtlebot_Interaction/sig_turtle_interaction/src/: turtle_interaction.cpp
controllers/Turtlebot_Interaction/sig_turtle_interaction/xml/: CheckPoint.x3d  CheckPoint.xml  Human_avatar.cpp  Makefile  TurtleBot.x3d  TurtleBot.xml  World.xml
controllers/iCub_Control/: Makefile  Robot.cpp
controllers/iCub_Experiment/iCub_For_CleanUp/: Camera.cpp  CleanUpWorld.xml  cleanUpRobot2.cpp  cleanUpUser.cpp  moderator.cpp  motion.txt
iCub_Control/: Robot.cpp
iCub_Experiment/iCub_For_CleanUp/: Camera.cpp  CleanUpWorld.xml  Makefile  SIGVerse_Record.csv  Wagon.cpp  Walk.txt  cleanUpRobot2.cpp  cleanUpUser.cpp  cleanUpUser1.cpp  cleanUpUser2.cpp  moderator.cpp  motion_rotation.txt  seModerator.xml
plugins/DistanceSensorViewWithOpenCV3/: DistanceSensorViewWithOpenCV3.sln
plugins/DistanceSensorViewWithOpenCV3/DistanceSensorViewWithOpenCV3/: DistanceSensorView.h  DistanceSensorViewWithOpenCV3.vcxproj  DistanceSensorViewWithOpenCV3.vcxproj.filters  MainForm.cpp  MainForm.h  ViewClass.h
plugins/KinectV2_Using_Quaternions/KinectV2/: ComPtr.h  KinectApp.h  KinectV2.vcxproj  KinectV2.vcxproj.filters  Logger.cpp  Logger.h  linkage.h  linkage_service.h  main.cpp
plugins/KinectV2_Using_Quaternions/Release/: KinectV2_2013.bat  SIGNiUserTracker.ini
plugins/OculusRiftSensor/ViewerService/: OculusRiftSensor.cpp
plugins/OculusRiftSensorDK2/AgentController/: Makefile  OculusRiftDK2Ctrl.cpp  (+1 more)
plugins/PSMove/: Makefile
textbook/: Configuration.txt  InitialPosition.txt  README.md  RobotController.cpp  WinWorld.xml
textbook/Chap7/: Moderator.cpp  QLearning.cpp  QLearning.h  README.md  RobotController.cpp  seModerator.xml
textbook/Chap8/: BayesianFilter.cpp  BayesianFilter.h  Moderator.cpp  Moderator.x3d  QLearning.cpp  README.md  WinWorld.xml
textbook/Chap9/: Moderator.cpp  ParticleFilter.cpp  ParticleFilter.h  README.md  WinWorld.xml
(+4 files in other folders)
