<?xml version="1.0"?>
<package>
  <name>sig_turtlebot_interaction</name>
  <version>0.0.0</version>
  <description>SIGverse Turtlebot interaction package</description>


  <maintainer email="gg@todo.todo">gg</maintainer>


  <license>BSD</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>kobuki_safety_controller</run_depend>
  <run_depend>yocs_velocity_smoother</run_depend>
  <run_depend>turtlebot_bringup</run_depend>

  <export>

  </export>
</package>